--- a/classical_dino_game.html
+++ b/classical_dino_game.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <audio id="music" src="/fur_elise.mp3" autoplay loop></audio>
+    <audio id="music" src="fur_elise.mp3" autoplay loop></audio>
     <canvas id="gameCanvas" width="600" height="200"></canvas>
     <script src="game.js"></script>
 </body>
